Add jang_jorim.jpg, pizza_mushroom.jpg, jang_jorim.html, stuffed_mushrooms.html

--- a/recipes/stuffed_mushrooms.html
+++ b/recipes/stuffed_mushrooms.html
@@ -4,9 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pizza Stuffed Mushrooms</title>
 </head>
 <body>
     
+    <h1>Pizza Stuffed Mushrooms</h1>
+    <p>
+        <image src="../images/pizza_mushroom.jpeg" alt="Stuffed mushroom picture" width="50%"></image>
+    </p>
+    <p>
+        Ingredients
+
+        <ul>
+            <li>12 Medium-Large mushroom caps, stems removed</li>
+            <li>1/2 cup of low sugar marinara sauce</li>
+            <li>1/2 cup shredded high quality mozarella</li>
+            <li>pepperoni slices</li>
+            <li>Fresh chopped parley or basil leaves</li>
+        </ul>
+    </p>
+
+    <p>
+        Instructions
+        <ol>
+            <li>Preaheat oven to 375 degrees F</li>
+            <li>On a 13x8 baking sheet space out the mushrooms and lay them upside down</li>
+            <li>Fill each mushroom cap with a table spoon of marinara and sprinkle it with mozzarella</li>
+            <li>Top each mushroom with a pepperoni if desired</li>
+            <li>Bake until cheese is melted or for around 15-20 minutes</li>
+            <li>sprinkle with the basil or parsley</li>
+        </ol>
+    </p>
 </body>
 </html>
