--- a/recipes/korean_potatoes.html
+++ b/recipes/korean_potatoes.html
@@ -8,5 +8,21 @@
 
     <body>
         <h1>Korean Potatoes</h1>
+
+        <p>
+            Ingredients
+            <ul>
+                <li>2 tablespoons vegtable oil</li>
+                <li>1½ pounds baby potatoes, cut into quarters</li>
+                <li>½ cup water</li>
+                <li>2½ tablespoons low-sodium soy sauce</li>
+                <li>2 tablespoons ketchup</li>
+                <li>2 tablespoons corn syrup</li>
+                <li>1½ tablespoons white sugar</li>
+                <li>1 tablespoon minced garlic</li>
+                <li>⅛ teaspoon red pepper flakes</li>
+                <li>1 teaspoon sesame seeds</li>
+            </ul>
+        </p>
     </body>
 </html>
