--- a/recipes/korean_potatoes.html
+++ b/recipes/korean_potatoes.html
@@ -24,5 +24,18 @@
                 <li>1 teaspoon sesame seeds</li>
             </ul>
         </p>
+
+        <p>
+            Instructions
+            <ol>
+                <li>Heat oil in a wok over medium-high heat. Add potatoes;
+                    stir-fry until browned in spots and partially cooked through, 5 to 7 minutes.</li>
+                <li>While potatoes are cooking, mix water, soy sauce, ketchup, corn syrup, sugar,
+                    garlic, and red pepper flakes together in a bowl.</li>
+                <li>Pour soy sauce mixture over potatoes.
+                    Reduce heat and simmer until potatoes are tender and sauce thickens, 6 to 8 minutes.
+                    Sprinkle with sesame seeds and toss to coat.</li>
+            </ol>
+        </p>
     </body>
 </html>
