--- a/recipes/korean_potatoes.html
+++ b/recipes/korean_potatoes.html
@@ -7,7 +7,10 @@
     </head>
 
     <body>
+        <a name="top"></a>
         <h1>Korean Potatoes</h1>
+
+        <p><img src="../images/korean_potatoes.jpeg"></p>
 
         <p>
             Ingredients
@@ -37,5 +40,8 @@
                     Sprinkle with sesame seeds and toss to coat.</li>
             </ol>
         </p>
+
+        <a href="#top">back to top</a>
+
     </body>
 </html>
