--- a/recipes/stuffed_mushrooms.html
+++ b/recipes/stuffed_mushrooms.html
@@ -7,7 +7,7 @@
     <title>Pizza Stuffed Mushrooms</title>
 </head>
 <body>
-    
+    <a name="top"></a>
     <h1>Pizza Stuffed Mushrooms</h1>
     <p>
         <image src="../images/pizza_mushroom.jpeg" alt="Stuffed mushroom picture" width="50%"></image>
@@ -35,5 +35,7 @@
             <li>sprinkle with the basil or parsley</li>
         </ol>
     </p>
+
+    <a href="#top">back to top</a>
 </body>
 </html>
