Added classes to file for the new CSS template

--- a/recipes/jang_jorim.html
+++ b/recipes/jang_jorim.html
@@ -3,6 +3,7 @@
 <head>
     <title>Jang Jorim Recipe</title>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body>
@@ -11,7 +12,7 @@
 
     <p><img src= "../images/jang_jorim.jpg" alt="Jang Jorim picture" width="50%"></p>
 
-    <p>
+    <p class="ingredients">
         Ingredients
             <ul>
                 <li>2lb hanger steak</li>
@@ -29,7 +30,7 @@
             </ul>
     </p>
 
-    <p>
+    <p class="instructions">
         Instructions
         <ol>
             <li>Soak the steak in cold water in a large bowl for 30min to 1 hr to drain residual blood.
@@ -48,8 +49,8 @@
         </ol>
     </p>
 
-    <a href="#top">back to top</a>
-    <a href="../index.html">Back home</a>
+    <a href="#top">Back to Top</a>
+    <a href="../index.html">Homepage</a>
 
 </body>
 
