--- a/recipes/korean_potatoes.html
+++ b/recipes/korean_potatoes.html
@@ -3,16 +3,16 @@
     <head>
         <title>Korean Potatoes</title>
         <meta charset="UTF-8">
-
+        <link rel="stylesheet" href="../styles.css">
     </head>
 
     <body>
         <a name="top"></a>
         <h1>Korean Potatoes</h1>
 
-        <p><img src="../images/korean_potatoes.jpeg"></p>
+        <p><img class="recipe jang" src="../images/korean_potatoes.jpeg"></p>
 
-        <p>
+        <p class="ingredients">
             Ingredients
             <ul>
                 <li>2 tablespoons vegtable oil</li>
@@ -28,7 +28,7 @@
             </ul>
         </p>
 
-        <p>
+        <p class="instructions">
             Instructions
             <ol>
                 <li>Heat oil in a wok over medium-high heat. Add potatoes;
@@ -41,8 +41,8 @@
             </ol>
         </p>
 
-        <a href="#top">back to top</a>
-        <a href="../index.html">Back home</a>
+        <a href="#top">Back To Top</a>
+        <a href="../index.html">Homepage</a>
 
     </body>
 </html>
