--- a/recipes/stuffed_mushrooms.html
+++ b/recipes/stuffed_mushrooms.html
@@ -5,14 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pizza Stuffed Mushrooms</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <a name="top"></a>
     <h1>Pizza Stuffed Mushrooms</h1>
     <p>
-        <image src="../images/pizza_mushroom.jpeg" alt="Stuffed mushroom picture" width="50%"></image>
+        <image class="recipe pizza" src="../images/pizza_mushroom.jpeg" alt="Stuffed mushroom picture" width="50%"></image>
     </p>
-    <p>
+    
+    <p class="ingredients">
         Ingredients
 
         <ul>
@@ -24,7 +26,7 @@
         </ul>
     </p>
 
-    <p>
+    <p class="instructions">
         Instructions
         <ol>
             <li>Preaheat oven to 375 degrees F</li>
@@ -36,7 +38,7 @@
         </ol>
     </p>
 
-    <a href="#top">back to top</a>
-    <a href="../index.html">Back home</a>
+    <a href="#top">Back To Top</a>
+    <a href="../index.html">Homepage</a>
 </body>
 </html>
