switched classes with correct key words

--- a/recipes/jang_jorim.html
+++ b/recipes/jang_jorim.html
@@ -10,7 +10,7 @@
     <a name="top"></a>
     <h1>Jang Jorim Recipe</h1>
 
-    <p><img src= "../images/jang_jorim.jpg" alt="Jang Jorim picture" width="50%"></p>
+    <p><img class="recipe jang" src= "../images/jang_jorim.jpg" alt="Jang Jorim picture" width="50%"></p>
 
     <p class="ingredients">
         Ingredients
