--- a/recipes/korean_potatoes.html
+++ b/recipes/korean_potatoes.html
@@ -10,7 +10,7 @@
         <a name="top"></a>
         <h1>Korean Potatoes</h1>
 
-        <p><img class="recipe jang" src="../images/korean_potatoes.jpeg"></p>
+        <p><img class="recipe potato" src="../images/korean_potatoes.jpeg"></p>
 
         <p class="ingredients">
             Ingredients
